<resources>
    <string name="app_name">NoteApp</string>
    <string name="preference_file_key">Share Preference</string>
    <string name="btn_Ok"></string>
    <string name="sign_up">SignUpScreen</string>
    <string name="Gmail">Gmail :</string>
    <string name="phone">Phone :</string>
    <string name="birthday">Birthday :</string>
    <string name="sign_In_Failed_gmail_password">Sign-in failed, please check your email and password</string>
    <string name="please_enter_your_email_and_password">please enter your email and password</string>
    <string name="please_enter_title_note">please enter your title and note</string>
    <string name="Username_password_incorrect">Username or password incorrect</string>
    <string name="Title">Title</string>
    <string name="Type_something">Type something...</string>
    <string name="Calender">Calender</string>
    <string name="March">March</string>
    <string name="Note">Notes</string>
    <string name="Create_note">Create you file note</string>
    <string name="add_float">add new item</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="text_sign_up">Your email or password is not correct /</string>
    <string name="SignUp">SignUp</string>
    <string name="Search">Search by the key word</string>
    <string name="file_note_found">file note found, try search again</string>

</resources>