<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:ignore="MissingConstraints"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="32sp"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_12_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLogin" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/Email"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLogin" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="@dimen/size_0_dp"
            android:layout_height="48dp"
            android:hint="@string/Password"
            android:layout_marginTop="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogIn"
        android:layout_marginTop="12dp"
        android:text="@string/Login"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="@id/passwordInput"
        app:layout_constraintEnd_toEndOf="@id/passwordInput" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textLogInState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginEnd="@dimen/size_24_dp"
        android:text="@string/text_sign_up"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogIn"
        app:layout_constraintStart_toStartOf="@id/btnLogIn"
        app:layout_constraintEnd_toEndOf="@id/btnLogIn"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textSignUpState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="16sp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="@id/textLogInState"
        app:layout_constraintStart_toEndOf="@id/textLogInState"
        app:layout_constraintTop_toTopOf="@id/textLogInState" />


</androidx.constraintlayout.widget.ConstraintLayout>