<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTextHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Note"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/size_8_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/txtTextHome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/size_32_dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageError"
        android:layout_width="@dimen/size_32_dp"
        android:layout_height="@dimen/size_32_dp"
        android:src="@drawable/ic_error_24"
        android:background="@drawable/bg_button"
        android:padding="@dimen/size_4_dp"
        android:layout_marginEnd="@dimen/size_16_dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSearchHome"
        android:layout_width="@dimen/size_32_dp"
        android:layout_height="@dimen/size_32_dp"
        android:src="@drawable/ic_search_image"
        android:background="@drawable/bg_button"
        android:padding="@dimen/size_4_dp"
        android:layout_marginEnd="@dimen/size_16_dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/imageError"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageNoteHome"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:src="@drawable/ic_note2"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_note"
        android:textSize="24sp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/size_12_dp"
        app:layout_constraintTop_toBottomOf="@id/imageNoteHome"
        app:layout_constraintStart_toStartOf="@id/imageNoteHome"
        app:layout_constraintEnd_toEndOf="@id/imageNoteHome" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/add_float"
        app:layout_constraintTop_toBottomOf="@id/imageNoteHome" />


</androidx.constraintlayout.widget.ConstraintLayout>