<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/viewUser"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="#D52A2A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/avatarUser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_icon"
        android:src="@drawable/img"
        android:layout_marginTop="240dp"
        app:layout_constraintTop_toTopOf="@id/viewUser"
        app:layout_constraintBottom_toBottomOf="@id/viewUser"
        app:layout_constraintStart_toStartOf="@id/viewUser"
        app:layout_constraintEnd_toEndOf="@id/viewUser" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textGmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/userText"
        android:layout_marginStart="@dimen/size_8_dp"
        android:layout_marginTop="@dimen/size_8_dp"
        android:text="@string/Gmail"
        app:layout_constraintTop_toBottomOf="@id/avatarUser"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOutGmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/userTextOutPut"
        android:layout_marginEnd="@dimen/size_8_dp"
        android:text="quanbh@gmail.com"
        android:layout_marginStart="@dimen/size_36_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textGmail"
        app:layout_constraintBottom_toBottomOf="@id/textGmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPhoneUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/userText"
        android:text="@string/phone"
        app:layout_constraintTop_toBottomOf="@id/textGmail"
        app:layout_constraintStart_toStartOf="@id/textGmail"
        android:layout_marginTop="@dimen/size_12_dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOutPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/userTextOutPut"
        android:layout_marginEnd="@dimen/size_8_dp"
        android:text="0867856003"
        android:layout_marginStart="@dimen/size_36_dp"
        app:layout_constraintTop_toTopOf="@+id/txtPhoneUser"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBirthdayUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/userText"
        android:text="@string/birthday"
        app:layout_constraintTop_toBottomOf="@id/txtPhoneUser"
        app:layout_constraintStart_toStartOf="@id/txtPhoneUser"
        android:layout_marginTop="@dimen/size_12_dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOutBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/userTextOutPut"
        android:layout_marginEnd="@dimen/size_8_dp"
        android:text="09/09/2003"
        android:layout_marginStart="22dp"
        app:layout_constraintBottom_toBottomOf="@id/txtBirthdayUser"
        app:layout_constraintTop_toTopOf="@+id/txtBirthdayUser"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtVersionUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/userText"
        android:text="Version :"
        app:layout_constraintTop_toBottomOf="@id/txtBirthdayUser"
        app:layout_constraintStart_toStartOf="@id/txtBirthdayUser"
        android:layout_marginTop="@dimen/size_12_dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtOutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/userTextOutPut"
        android:layout_marginEnd="@dimen/size_8_dp"
        android:text="2.5.0"
        android:layout_marginStart="@dimen/size_36_dp"
        app:layout_constraintTop_toTopOf="@+id/txtVersionUser"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>